* bug:MID-10218[] Task execution constraints added to advanced options tab.
* bug:MID-10216[] Support exclusion of metadata in `get`/`search` rest APIs.
* bug:MID-10305[] Remove max password length constraint.
* bug:MID-10048[] Fix ClassCastException when creating duplicates of object types with new archetype
* bug:MID-9300[] Secure schema usage in PostgresSQL (not using public schema).

=== Other Improvements

* Implemented xrefv:/midpoint/reference/support-4.9/resources/attribute-caching/#_caching_passwords[shadow password caching], with the possibility of storing them in reversible encrypted form.
* Improved handling of xrefv:/midpoint/reference/support-4.9/resources/resource-configuration/schema-handling/volatility/[volatile shadow attributes].
* Update GUI views after changing of the archetype, that is used in the view. See bug:MID-9776[].
* Adding support for PKCE (Proof Key for Code Exchange) as additional security for OIDC authentication module. See bug:MID-10155[].
* Adding new configuration attribute for OIDC authentication module, that is used for ID Token signing algorithm. See xref:/midpoint/reference/security/authentication/flexible-authentication/modules/oidc/[Oidc Module].
* Apply the Web Content Accessibility Guidelines (WCAG) to all login pages and self-service pages. See bug:MID-9847[].
** Used 'honeypot' instead of captcha on self-registration and post-authentication pages to protect against spam bots.
* Improved the documentation on the resource configuration. See bug:MID-10176[].

=== Other Bug Fixes

* Fixed "Couldn't get assignments conflicts" error occurring during Request access. See bug:MID-10124[].
* Fixed "No definition for item ... in outbound mapping for association" error. See bug:MID-10214[].
* Fixed the issue with policy rules `minAssignees`/`maxAssignees` not being triggered. See bug:MID-9869[].
* Fixed retrieving referenced objects with their own references when caching is enabled. See bug:MID-10271[].