@@ -12,7 +12,7 @@
         <h5 class="text-center text-secondary mb-5 lh-2" wicket:id="subText"/>
 
         <wicket:child/>
-        <div class="d-flex gap-3 justify-content-center mt-5">
+        <div class="d-flex gap-3 justify-content-center mt-5" wicket:id="buttonsStrip">
             <a class="btn text-primary" wicket:id="back">
                 <i class="fas fa-arrow-left mr-1"></i>
                 <wicket:message key="WizardHeader.back"/>
