@@ -51,6 +51,7 @@ Overall, midPoint 4.9 is a major step from the past into the future.
 * bug:MID-10305[] Remove max password length constraint.
 * bug:MID-10048[] Fix ClassCastException when creating duplicates of object types with new archetype
 * bug:MID-9300[] Secure schema usage in PostgresSQL (not using public schema).
+* bug:MID-10278[] Fix non-clickable part of a button in Edit Schema popup panel.
 
 === Other Improvements
 
